update network tp9